--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
     "background_color": "#ffffff",
     "display": "standalone",
     "orientation": "any",
-    "scope": "",
-    "start_url": "/https://darkneet69.github.io/universal-character-sheet/",
+    "scope": "https://darkneet69.github.io/universal-character-sheet/",
+    "start_url": "https://darkneet69.github.io/universal-character-sheet/",
     "icons": [
         {
             "src": "icons/icon_192.png",
