--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Universal Character Sheet",
     "short_name": "Universal Character Sheet",
     "description": "Create dynamic character sheets for any TRPG systems",
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#E6E6F0",
+    "background_color": "#E6E6F0",
     "display": "standalone",
     "orientation": "any",
     "scope": "https://darkneet69.github.io/universal-character-sheet/",
