--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Universal Character Sheet",
     "short_name": "Universal Character Sheet",
-    "description": "Create dynamic character sheets for any TRPG systems",
+    "description": "Create customizable character sheets for any TRPG system",
     "theme_color": "#E6E6F0",
     "background_color": "#E6E6F0",
     "display": "standalone",
