--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "Universal Character Sheet",
-    "short_name": "Universal Character Sheet",
-    "description": "Create customizable character sheets for any TRPG system",
+    "name": "Character Sheet Online",
+    "short_name": "Character Sheet Online",
+    "description": "Create customizable character sheet for any TRPG system",
     "theme_color": "#191919",
     "background_color": "#191919",
     "display": "standalone",
     "orientation": "any",
-    "scope": "https://darkneet69.github.io/universal-character-sheet/",
-    "start_url": "https://darkneet69.github.io/universal-character-sheet/",
+    "scope": "https://darkneet69.github.io/character.sheet.online",
+    "start_url": "https://darkneet69.github.io/character.sheet.online",
     "icons": [
         {
             "src": "icons/icon_192.png",
