--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Character Sheet Online",
     "short_name": "Character Sheet Online",
     "description": "Create customizable character sheet for any TRPG system",
-    "theme_color": "#222224",
-    "background_color": "#222224",
+    "theme_color": "#eff2f7",
+    "background_color": "#eff2f7",
     "display": "standalone",
     "orientation": "any",
     "scope": "https://darkneet69.github.io/character.sheet.online/",
