--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Create customizable character sheet for any TRPG system",
     "theme_color": "#fff",
     "background_color": "#fff",
-    "display": "fullscreen",
+    "display": "standalone",
     "orientation": "any",
     "scope": "https://darkneet69.github.io/character.sheet.online/",
     "start_url": "https://darkneet69.github.io/character.sheet.online/",
